--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="c:\Users\ADMIN\Downloads\niyas resume.pdf" target="c:\Users\ADMIN\Downloads\niyas resume.pdf" class="download-button">Download CV</a>
+            <a href="niyas resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
